tests/NormalTests/paczka1/small_fuzzy/77764973.err
Error in line 8: 266 S973 15,6
Error in line 13: 266 S274 266,78
